--- a/client/src/app/component/edit-author/edit-author.component.html
+++ b/client/src/app/component/edit-author/edit-author.component.html
@@ -3,29 +3,29 @@
         <div class='card-header'>
           
         </div>
-        <div class='card-body'>
+        <div class='card-body' style="background-color: black; color: white;">
             <div class='table-responsive'>
                 <table class='table'>
                     <tbody>
     
 
                         <tr>
-                            <td><label>Author Name</label></td>
+                            <td><label style="color: white;">Author Name</label></td>
                             <td><input type="text" name="a_name" [(ngModel)] ="authorItem.authorName"/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Major Works </label></td>
+                            <td><label style="color: white;">Major Works </label></td>
                             <td><input type="text" name="a_code" [(ngModel)] ="authorItem.majorworks"/></td>
                         </tr>
 
           
                         <tr>
-                            <td><label>  About</label></td>
+                            <td><label style="color: white;">  About</label></td>
                             <td style="text-align: justify;"><input type="text" name="a_desc" [(ngModel)] ="authorItem.description"/></td>
                         </tr>
                         <tr>
-                            <td><label>Authot imageUrl</label></td>
+                            <td><label style="color: white;">Authot imageUrl</label></td>
                             <td><input type="text" name="a_image" [(ngModel)] ="authorItem.imageUrl"/></td>
                         </tr>
                         <tr>
