--- a/client/src/app/component/edit-book/edit-book.component.html
+++ b/client/src/app/component/edit-book/edit-book.component.html
@@ -3,40 +3,40 @@
         <div class='card-header'>
           
         </div>
-        <div class='card-body'>
+        <div class='card-body' style="background-color: rgb(24, 24, 26); color: white; ">
             <div class='table-responsive'>
                 <table class='table'>
                     <tbody>
                         <tr>
-                            <td><label>Book Id</label></td>
+                            <td><label style="color: white;">Book Id</label></td>
                             <td><input type="text" name="b_id" [(ngModel)] ="bookItem.bookId"/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Book Name</label></td>
+                            <td><label style="color: white;">Book Name</label></td>
                             <td><input type="text" name="b_name" [(ngModel)] ="bookItem.bookName"/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Genre</label></td>
+                            <td><label style="color: white;">Genre</label></td>
                             <td><input type="text" name="b_code" [(ngModel)] ="bookItem.bookCode"/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Author Name</label></td>
+                            <td><label style="color: white;">Author Name</label></td>
                             <td><input type="text" name="b_auth" [(ngModel)] ="bookItem.authorName"/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Book Description</label></td>
+                            <td><label style="color: white;">Book Description</label></td>
                             <td style="text-align: justify;"><input type="text" name="b_desc" [(ngModel)] ="bookItem.description"/></td>
                         </tr>
                         <tr>
-                            <td><label>Book StarRating</label></td>
+                            <td><label style="color: white;">Book StarRating</label></td>
                             <td><input type="text" name="b_rating" [(ngModel)] ="bookItem.starRating"/></td>
                         </tr>
                         <tr>
-                            <td><label>Book imageUrl</label></td>
+                            <td><label style="color: white;">Book imageUrl</label></td>
                             <td><input type="text" name="b_image" [(ngModel)] ="bookItem.imageUrl"/></td>
                         </tr>
                         <tr>
