--- a/client/src/app/component/header/header.component.html
+++ b/client/src/app/component/header/header.component.html
@@ -1,6 +1,8 @@
+
+
 <h1>{{title}}</h1>
 <app-header></app-header>
-<app-book></app-book>
+<!-- <app-book></app-book> -->
 <router-outlet></router-outlet>
 
 <!-- <div style="background-color: black; color: white;" class = 'card-header'>
