--- a/client/src/app/component/new-book/new-book.component.html
+++ b/client/src/app/component/new-book/new-book.component.html
@@ -3,42 +3,42 @@
         <div class='card-header'>
             {{title}}
         </div>
-        <div class='card-body'>
+        <div class='card-body' style="background-color: rgb(6, 116, 160); color:rgb(240, 231, 231);">
             <div class='table-responsive'>
                 <table class='table'>
                     <tbody>
                         <tr>
-                            <td><label>Book Id</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Book Id</label></td>
                             <td><input type="text" name="b_id" [(ngModel)] ="bookItem.bookId" required /></td>
                         </tr>
 
                         <tr>
-                            <td><label>Book Name</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Book Name</label></td>
                             <td><input type="text" name="b_name" [(ngModel)] ="bookItem.bookName" required /></td>
                         </tr>
 
                         <tr>
-                            <td><label>Genre</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Genre</label></td>
                             <td><input type="text" name="b_code" [(ngModel)] ="bookItem.bookCode" required/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Author Name</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Author Name</label></td>
                             <td><input type="text" name="b_auth" [(ngModel)] ="bookItem.authorName" required/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Book Description</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Book Description</label></td>
                             <td><input type="text" name="b_desc" [(ngModel)] ="bookItem.description" required/></td>
                         </tr>
 
                         
                         <tr>
-                            <td><label>Book starRating</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Book starRating</label></td>
                             <td><input type="text" name="b_rating" [(ngModel)] ="bookItem.starRating" required/></td>
                         </tr>
                         <tr>
-                            <td><label>Book imageUrl</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Book imageUrl</label></td>
                             <td><input type="text" name="b_image" [(ngModel)] ="bookItem.imageUrl" required/></td>
                         </tr>
                         <tr>
