--- a/client/src/app/new-author/new-author.component.html
+++ b/client/src/app/new-author/new-author.component.html
@@ -3,28 +3,28 @@
         <div class='card-header'>
             {{title}}
         </div>
-        <div class='card-body'>
+        <div class='card-body' style="background-color: rgb(6, 116, 160); color:rgb(240, 231, 231);">
             <div class='table-responsive'>
                 <table class='table'>
                     <tbody>
                         
                         <tr>
-                            <td><label>Author Name</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Author Name</label></td>
                             <td><input type="text" name="b_name" [(ngModel)] ="AuthorItem.authorName" required/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Major Works</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Major Works</label></td>
                             <td><input type="text" name="b_auth" [(ngModel)] ="AuthorItem.majorworks" required/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Description</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Description</label></td>
                             <td><input type="text" name="b_desc" [(ngModel)] ="AuthorItem.description" required/></td>
                         </tr>
 
                         <tr>
-                            <td><label>Author imageUrl</label></td>
+                            <td><label style="color: rgb(243, 234, 234);">Author imageUrl</label></td>
                             <td><input type="text" name="b_image" [(ngModel)] ="AuthorItem.imageUrl" required/></td>
                         </tr>
                         <tr>
