--- a/client/src/app/component/edit-author/edit-author.component.html
+++ b/client/src/app/component/edit-author/edit-author.component.html
@@ -25,7 +25,7 @@
                             <td style="text-align: justify;"><input type="text" name="a_desc" [(ngModel)] ="authorItem.description"/></td>
                         </tr>
                         <tr>
-                            <td><label style="color: white;">Authot imageUrl</label></td>
+                            <td><label style="color: white;">Author imageUrl</label></td>
                             <td><input type="text" name="a_image" [(ngModel)] ="authorItem.imageUrl"/></td>
                         </tr>
                         <tr>
